    * 3559 WATO API: now able to bake agents with the new action "bake_agents"
    * 3785 WATO rulesets: now able to set a negate option for services and items...
    * 3786 WATO webapi: now able to bake agents with the new action bake_agents
    * 3792 check_http: now able to configure HTTP method PROPFIND
    * 3851 Host edit dialog: Checkbox hosttags are now checked by default...
    * 3060 FIX: Folder properties: Fixed exception when a user has no alias set...
    * 3062 FIX: Git integration: Fixed not adding files in WATO folders to git control
    * 3203 FIX: Distributed WATO: Fixed exception in remote host service discovery...
    * 3215 FIX: WATO git ignore files are now updated on each commit
    * 3216 FIX: Fixed exception when trying to edit an already deleted user
    * 3222 FIX: Fixed broken duplicate user id validation when creating new users
    * 3223 FIX: Fixed exception in network scan when hosts can not be resolved
    * 3224 FIX: Fixed broken "WATO legacy eval"
    * 3225 FIX: Fixed exception when renaming a host which is configured as parent on a folder
    * 3179 FIX: Fix labelling of heartbeat interval for liveproxyd settings...
    * 3180 FIX: Fix broken site specific globals and disabling of WATO in slave sites
    * 3182 FIX: Fix bulk operations based on search result folder...
    * 2998 FIX: Fixed broken WATO rules where content is dynamically loaded...
    * 3246 FIX: Fix link for editing a BI aggregation after coming back from the details of another aggregation...
    * 3000 FIX: Host check command: "Use a custom check plugin" was not working with CMC...
    * 3231 FIX: Not showing network scan properties in host search form anymore
    * 3086 FIX: fixed incorrect host list when one wato folder was a substring of another...
    * 3091 FIX: fixed failure to rename hosts in raw edition...
    * 3280 FIX: Fixed too often executed network scans...
    * 3281 FIX: Fixed network scan overwriting folder modifications made during the scan