@@ -1,0 +1,9 @@
+Title: WATO rule overview: Adjusted wording of condition texts
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i1
+Date: 1473671666
+Class: feature
+
+
