@@ -512,6 +512,7 @@
     * 3786 WATO webapi: now able to bake agents with the new action bake_agents
     * 3792 check_http: now able to configure HTTP method PROPFIND
     * 3851 Host edit dialog: Checkbox hosttags are now checked by default...
+    * 3800 WATO rule overview: Adjusted wording of condition texts
     * 3060 FIX: Folder properties: Fixed exception when a user has no alias set...
     * 3062 FIX: Git integration: Fixed not adding files in WATO folders to git control
     * 3203 FIX: Distributed WATO: Fixed exception in remote host service discovery...
